--- a/shopify-git.liquid
+++ b/shopify-git.liquid
@@ -5,17 +5,14 @@
 
    {% if collection.title contains 'Google Analytics' %}
     {% section 'ga-bundle' %}
-   {% endif %}
 
-   {% if collection.title contains 'SEO' %}
+   {% elsif collection.title contains 'SEO' %}
     {% section 'seo-bundle' %}
-   {% endif %}
 
-   {% if collection.title contains 'Content Marketing' %}
+   {% elsif collection.title contains 'Content Marketing' %}
     {% section 'content-bundle' %}
-   {% endif %}
 
-   {% if collection.title contains 'Email Marketing' %}
+   {% elsif collection.title contains 'Email Marketing' %}
     {% section 'email-bundle' %}
    {% endif %}
 
